--- a/Swift5Firebase/Swift5Firebase/View/Base.lproj/Main.storyboard
+++ b/Swift5Firebase/Swift5Firebase/View/Base.lproj/Main.storyboard
@@ -168,11 +168,79 @@
                     <connections>
                         <outlet property="cameraButton" destination="mE6-pU-hE8" id="fAG-FQ-Aib"/>
                         <outlet property="timeLineTableView" destination="nq2-jC-IrE" id="VCU-1n-kCA"/>
+                        <segue destination="ird-PG-Zrn" kind="presentation" identifier="detail" id="fod-xY-wmt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f7N-7g-QSW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2877.5999999999999" y="128.18590704647679"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="r8t-yk-NvL">
+            <objects>
+                <viewController id="ird-PG-Zrn" customClass="DetailViewController" customModule="Swift5Firebase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B4V-uS-Q9H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vvh-k1-PGw">
+                                <rect key="frame" x="24" y="59" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rXN-Lt-tzm">
+                                <rect key="frame" x="24" y="147" width="326" height="326"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mmZ-rD-edm">
+                                <rect key="frame" x="130" y="59" width="220" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CreatAt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pgy-Ew-RbY">
+                                <rect key="frame" x="130" y="118" width="220" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="コメント" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ils-KB-bjA">
+                                <rect key="frame" x="24" y="481" width="318" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tyx-zv-mQQ">
+                                <rect key="frame" x="24" y="570" width="318" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <state key="normal" title="シェア">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareButtonAction:" destination="ird-PG-Zrn" eventType="touchUpInside" id="8nQ-Kn-cHQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vR7-Vc-XRn"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Bnn-cz-Wgz"/>
+                    <connections>
+                        <outlet property="commentLabel" destination="ils-KB-bjA" id="UNl-pe-HI4"/>
+                        <outlet property="contentsImageView" destination="rXN-Lt-tzm" id="wjT-fB-C6i"/>
+                        <outlet property="dateLabel" destination="Pgy-Ew-RbY" id="hHK-J4-8Dt"/>
+                        <outlet property="profileImageView" destination="vvh-k1-PGw" id="Uhn-22-LIh"/>
+                        <outlet property="shareButton" destination="Tyx-zv-mQQ" id="JpU-aG-go7"/>
+                        <outlet property="userNameLabel" destination="mmZ-rD-edm" id="jZ1-Mc-tKD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jDl-TK-nbv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2877.5999999999999" y="903.59820089955031"/>
         </scene>
         <!--Edit And Post View Controller-->
         <scene sceneID="1Z1-mh-nNs">
@@ -197,22 +265,26 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-Un-gdW">
+                                <rect key="frame" x="287" y="607" width="63" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <state key="normal" title="送信">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="postAction:" destination="Kq1-cc-I35" eventType="touchUpInside" id="irK-qs-CPu"/>
+                                </connections>
+                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3yL-S2-VPd">
-                                <rect key="frame" x="24" y="509" width="326" height="67"/>
+                                <rect key="frame" x="16" y="594" width="263" height="67"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTQ-Un-gdW">
-                                <rect key="frame" x="24" y="617" width="326" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="送信"/>
-                                <connections>
-                                    <action selector="postAction:" destination="Kq1-cc-I35" eventType="touchUpInside" id="irK-qs-CPu"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="o6w-2t-7bd"/>
@@ -220,6 +292,7 @@
                     <connections>
                         <outlet property="commentTextView" destination="3yL-S2-VPd" id="MPD-dc-vY4"/>
                         <outlet property="contentImageView" destination="Oc1-9L-zCX" id="U7u-Pq-dzc"/>
+                        <outlet property="sendButton" destination="qTQ-Un-gdW" id="UzW-De-JHW"/>
                         <outlet property="userNameLabel" destination="JBZ-Hm-9ld" id="Fnu-Ya-tKe"/>
                         <outlet property="userProfileImageView" destination="gCV-7O-KA5" id="j4u-Eg-Kwc"/>
                     </connections>
